# RAG-System

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  DESIGN_DOC.md  HANDOFF_TO_P4-0.md  P4-0-COMPLETION.md  PHASE_4_QUICK_REFERENCE.md  PHASE_4_TASK_DIAGRAM.md  Procfile  README.md  docker-compose.yml  inspect_db.py  nixpacks.toml  package-lock.json  pyproject.toml  pytest.ini  railway.toml  requirements.txt  run_tests.sh  show_db.sh  start.sh  vercel.json
backend/: Dockerfile  loaders.py  main.py  requirements.txt
docs/: 01_DESIGN_DOC.md  02_AGENT_SPECS.md  03_INGESTION_STRATEGY.md  04_TEST_PLAN.md  05_SPRINT_BACKLOG.md  06_FRONTEND_PLAYBOOK.md  07_PHASE_4_PLAN.md  08_GDRIVE_SETUP.md
frontend/: .env.example  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
src/app/: AGENTS.md  CLAUDE.md  __init__.py  exceptions.py
src/app/agents/: __init__.py  orchestrator.py  tailor.py
src/app/api/: __init__.py
src/app/config/: __init__.py  settings.py
src/app/connectors/: __init__.py  gdrive.py  web.py
src/app/guardrails/: __init__.py
src/app/ingestion/: __init__.py  service.py
src/app/memory/: __init__.py  agent.py  embeddings.py  lancedb_store.py
src/app/parser/: __init__.py
src/app/schemas/: __init__.py  api.py  base.py  connector.py  guardrails.py  memory.py  orchestrator.py  parser.py  tailor.py
src/app/services/: llm.py
src/brain/: __init__.py  engine.py  schemas.py
src/ingestion/: base.py  connector.py  dolphin.py
tests/: AGENTS.md  CLAUDE.md  __init__.py  conftest.py  golden_dataset.json
tests/api/: __init__.py  test_backend_api.py
tests/fixtures/documents/: sample.csv  sample.docx  sample.md  sample.pptx  sample.xlsx
tests/integration/: __init__.py  test_end_to_end.py  test_gdrive_ingestion.py  test_ingestion_flow.py  test_llm_integration.py  test_multiformat_ingestion.py  test_walking_skeleton.py  test_walking_skeleton_lancedb.py
tests/mocks/: __init__.py  data_generators.py  mock_llm.py  mock_vectordb.py
tests/unit/: test_base_parser.py  test_rag_engine.py
tests/unit/chunking/: __init__.py  test_chunking_strategy.py
tests/unit/connector/: __init__.py  test_connector_agent.py
tests/unit/connectors/: __init__.py  test_gdrive_connector.py  test_web_connector.py
tests/unit/guardrails/: __init__.py  test_guardrails_agent.py
tests/unit/memory/: __init__.py  test_embeddings.py  test_memory_agent.py
tests/unit/orchestrator/: __init__.py  test_roma_orchestrator.py
tests/unit/parser/: __init__.py  test_dolphin_parser.py
tests/unit/parsers/: test_dolphin_multiformat.py
tests/unit/services/: test_llm_service.py
tests/unit/state/: __init__.py  test_conversation_state.py
tests/unit/tailor/: __init__.py  test_tailor_agent.py
