[project]
name = "rag-system"
version = "0.1.0"
description = "Multi-Source Agentic RAG Web App with ROMA & Dolphin Integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RAG Team" }]

dependencies = [
    # Core Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Async HTTP Client
    "httpx>=0.26.0",

    # Vector Database (per ARCHITECTURE.md - LanceDB is the project standard)
    "lancedb>=0.5.0",
    "pyarrow>=15.0.0",

    # LLM Integration
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "langchain-community>=0.0.20",

    # Document Parsing (Dolphin Parser - per INGESTION_STRATEGY.md)
    "unstructured[pdf,docx,pptx,md]>=0.12.0",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.10.0",

    # Embeddings
    "sentence-transformers>=2.3.0",

    # Google Drive Integration (per DESIGN_DOC.md)
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",

    # Web Scraping (per INGESTION_STRATEGY.md)
    "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dev = [
    # Testing (per TEST_PLAN.md Section 8)
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Linting & Formatting
    "ruff>=0.2.0",

    # Static Type Checking
    "mypy>=1.8.0",

    # Pre-commit Hooks
    "pre-commit>=3.6.0",

    # Type stubs for dependencies
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# =============================================================================
# RUFF CONFIGURATION - Strict Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    # Pyflakes - detect errors
    "F",
    # pycodestyle - PEP8 style
    "E",
    "W",
    # isort - import sorting
    "I",
    # pep8-naming
    "N",
    # pyupgrade - modernize syntax
    "UP",
    # flake8-bugbear - common bugs
    "B",
    # flake8-simplify - simplifications
    "SIM",
    # flake8-comprehensions
    "C4",
    # flake8-type-checking - TYPE_CHECKING blocks
    "TCH",
    # Ruff-specific rules
    "RUF",
    # McCabe complexity
    "C90",
    # flake8-unused-arguments
    "ARG",
    # flake8-return
    "RET",
    # flake8-annotations (partial - enforces function annotations)
    "ANN",
]

ignore = [
    # Allow self/cls without annotation
    "ANN101",
    "ANN102",
    # Allow Any type in some cases
    "ANN401",
]

# McCabe complexity threshold
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests can have unused arguments (fixtures), magic values, etc.
"tests/**/*.py" = ["ARG001", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY CONFIGURATION - Strict Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true

# Source paths
mypy_path = "src"
packages = ["app"]

# Per-module overrides for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "sentence_transformers.*",
    "uvicorn.*",
    "unstructured.*",
    "langchain_community.*",
    "trafilatura.*",
    "googleapiclient.*",
    "google.auth.*",
    "google_auth_oauthlib.*",
    "anthropic.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "slow: Slow-running tests",
    "real_embeddings: Run EmbeddingGenerator logic with a stubbed model",
]
filterwarnings = [
    "error",
    "ignore::FutureWarning",
    "ignore::UserWarning:torch.*",
    "ignore:.*CUDA.*:UserWarning",
    "ignore:.*GPU.*:UserWarning",
    "ignore:.*cuda.*:UserWarning",
    "ignore:.*gpu.*:UserWarning",
    "ignore:.*torch.classes.*:UserWarning",
    "ignore:.*PyTorch version.*:UserWarning",
    "ignore:.*not compiled with CUDA.*:UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src/app"]
branch = true
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
